# proxy-to-codex

./: .gitignore  README.md  codex_config.py  litellm_config.yaml  main.py  main_imports.txt  proxy-to-codex.spec  pyproject.toml  server.py  temp.patch  todo.md
.github/workflows/: release.yml
docs/: codex-profile-persistence-plan.md
docs/superpowers/specs/: 2026-05-11-proxy-gui-design.md
scripts/: publish.ps1  setup.iss
tests/: test_reasoning_context.py
