[project]
name = "proxy-to-codex"
version = "0.1.19"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "tomlkit>=0.15.0",
    "uvicorn>=0.33.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
